--- a/src/app/components/download/download.component.html
+++ b/src/app/components/download/download.component.html
@@ -33,7 +33,7 @@
                 </h2>
               </ion-col>
               <ion-col>
-                <ion-button shape="round" color="success">
+                <ion-button shape="round" color="success" onClick="location.href='https://drive.google.com/file/d/1_L_trWWZ2Rqv4TJarwieJkZ8B2WNd5rE/view?usp=share_link'">
                   Playstore
                   <ion-icon slot="end" name="logo-google-playstore"></ion-icon>
                 </ion-button>
